[gd_scene load_steps=9 format=3 uid="uid://brv7jh3ajwafs"]

[ext_resource type="Script" uid="uid://c6m8503g4didr" path="res://levels/lobby.gd" id="1_doeiq"]
[ext_resource type="PackedScene" uid="uid://ufflwksi0lay" path="res://ui/game_ui.tscn" id="2_63tst"]
[ext_resource type="PackedScene" uid="uid://cn803c0xqyv1f" path="res://entities/door.tscn" id="2_n1gxf"]
[ext_resource type="PackedScene" uid="uid://djbilbq57aoeu" path="res://entities/player/player.tscn" id="3_3ohsu"]
[ext_resource type="PackedScene" uid="uid://cpah0tbdc66u" path="res://entities/npc/alice.tscn" id="4_63tst"]
[ext_resource type="AudioStream" uid="uid://b0ob4tc24yjga" path="res://assets/music/lobby_theme.mp3" id="5_63tst"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_748nt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqvnj"]
size = Vector2(1066, 20)

[node name="Lobby" type="Node2D"]
script = ExtResource("1_doeiq")

[node name="World" type="Node2D" parent="."]
z_index = -1

[node name="Floor" type="ColorRect" parent="World"]
offset_left = 439.0
offset_top = 198.0
offset_right = 1463.0
offset_bottom = 798.0
color = Color(0.2, 0.3, 0.2, 1)

[node name="Walls" type="StaticBody2D" parent="World"]
collision_layer = 3
physics_material_override = SubResource("PhysicsMaterial_748nt")

[node name="WallTop" type="CollisionShape2D" parent="World/Walls"]
position = Vector2(960, 193)
shape = SubResource("RectangleShape2D_qqvnj")

[node name="WallBottom" type="CollisionShape2D" parent="World/Walls"]
position = Vector2(946, 806)
shape = SubResource("RectangleShape2D_qqvnj")

[node name="WallLeft" type="CollisionShape2D" parent="World/Walls"]
position = Vector2(427, 533)
rotation = 1.5708
shape = SubResource("RectangleShape2D_qqvnj")

[node name="WallRight" type="CollisionShape2D" parent="World/Walls"]
position = Vector2(1473, 548)
rotation = 1.5708
shape = SubResource("RectangleShape2D_qqvnj")

[node name="Doors" type="Node2D" parent="World"]

[node name="QueenDoor" parent="World/Doors" instance=ExtResource("2_n1gxf")]
position = Vector2(942, 214)

[node name="ChesireDoor" parent="World/Doors" instance=ExtResource("2_n1gxf")]
position = Vector2(409, 513)

[node name="CaterpillarDoor" parent="World/Doors" instance=ExtResource("2_n1gxf")]
position = Vector2(1490, 513)

[node name="Player" parent="." instance=ExtResource("3_3ohsu")]
position = Vector2(945, 494)

[node name="Alice" parent="." instance=ExtResource("4_63tst")]
position = Vector2(1056, 494)

[node name="UI" parent="." instance=ExtResource("2_63tst")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_63tst")
